# snip-dxgi

./: Cargo.toml  README.md
examples/: screen.rs
lib/: Cargo.toml
lib/src/common/: quartz.rs  x11.rs
lib/src/dxgi/: mod.rs
src/: lib.rs
src/linux/: mod.rs
src/macos/: mod.rs
src/win/: dxgi.rs  gdi.rs  mod.rs
